# etch

./: .clangformat  .gitignore  .kilocodemodes  AGENTS.md  CLAUDE.md  README.md  config.nims  etch.nimble  justfile  nim.cfg
.claude/: settings.local.json
demo/etch/: CMakeLists.txt  README.md  arkanoid.etch  main.cpp
demo/lua/: CMakeLists.txt  README.md  arkanoid.lua  main.cpp
docs/: README.md  c-api.md  comptime.md  control-flow.md  debugging.md  functions.md  globals.md  index.md  modules.md  operator-overloading.md  overflow.md  performance.md  safety.md  types.md
examples/: addition_int_string.etch  addition_int_string.fail  advanced_codegen.etch  advanced_codegen.pass  arithmetic_mixed_types.etch  arithmetic_mixed_types.fail  arithmetic_operations.etch  arithmetic_operations.pass  array_bounds_check_test.fail  array_bounds_test.etch  array_bounds_test.pass  array_concat_edge_cases_test.etch  array_concat_edge_cases_test.pass  array_concat_test.etch  array_concat_test.pass  array_concat_type_error_test.etch  array_concat_type_error_test.fail  array_demo.etch  array_demo.pass  array_in_incompatible_types.etch  array_in_incompatible_types.fail  array_in_test.etch  array_in_test.pass  array_length_test.etch  array_of_strings.etch  array_of_strings.pass  array_operations.pass  array_practical_test.etch  array_practical_test.pass  array_valid_bounds_test.etch  array_valid_bounds_test.pass  arrays_get_set_ops_test.etch  arrays_get_set_ops_test.pass  arrays_test.etch  assignment_immutable.fail  basic_divide_test.etch  basic_math.etch  basic_math.result  bounds_check_test.error  bounds_check_test.etch  (+943 more)
include/: etch.h  etch.hpp
performance/: arithmetic_operations.etch  arithmetic_operations.lua  arithmetic_operations.py  array_operations.etch  array_operations.lua  array_operations.py  for_loop_print.etch  for_loop_print.lua  for_loop_print.pass  for_loop_print.py  for_loop_print_10k.etch  for_loop_print_10k.py  function_calls.etch  function_calls.lua  function_calls.pass  function_calls.py  math_intensive.etch  math_intensive.lua  math_intensive.py  memory_allocation.etch  memory_allocation.lua  memory_allocation.py  nested_loops.lua  nested_loops.py  option_operations.etch  option_operations.lua  option_operations.pass  option_operations.py  ref_operations.lua  ref_operations.py  result_operations.lua  result_operations.pass  result_operations.py  string_operations.etch  string_operations.lua  string_operations.pass  string_operations.py  tuple_operations.etch  tuple_operations.lua  tuple_operations.py
slides/: README.md
src/: etch.nim  etch_lib.nim
tests/: .gitignore  README.md  test_comprehensive_stepping.nim  test_debug_globals.etch  test_debug_globals.nim  test_debugger_basic.nim  test_debugger_crash.nim  test_debugger_for.nim  test_debugger_global_init.nim  test_debugger_integration.nim  test_debugger_simple.nim  test_debugger_while.nim  test_dump_bytecode.nim  test_edge_buffer.nim  test_fn_order_stepping.nim  test_for_loop_debug.nim  test_function_name_demangling.nim  test_heap_verification.nim  test_normal_var_debug.nim  (+10 more)
(+282 files in other folders)
